--- a/card.html
+++ b/card.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="card_style.css">
-    <script src="main.js" type="text/javascript"></script><title>Happy Woman's day 20/10</title>
+    <script src="card.js" type="text/javascript"></script><title>Happy Woman's day 20/10</title>
 </head>
 <body>
     <div class="card">
-        <div class="card-detail">
-            <h1>Happy Women's Day</h1>
+        <div class="card-detail" >
+            <h1 id = "bt_show_card_info">Happy Women's Day</h1>
     
-            <p>" Ngày 20-10 chúc một nửa thế giới luôn thành công trong cuộc sống. "</p>
-            <p>" Luôn duyên dáng và xinh đẹp trong mắt một nửa thế giới còn lại. "</p>
+            <p>" Tự nhìn lên cao, tận hưởng bầu trời sao của riêng mình."</p>
+            <p>" Nhấn vào ảnh của em đây này"</p>
         </div>
         <div class="card-image">
-            <img src="https://images.pexels.com/photos/931147/pexels-photo-931147.jpeg" alt="">
+            <img src="image\1.jpeg" alt="">
         
-            <div class="card-info">
-                <h2>Chúc Các Bạn Nữ:</h2>
+            <div class="card-info" id="info_card">
+                <h2>Chúc Nguyễn Thị Huyền:</h2>
                 <ul>
                     <li>Luôn khỏe mạnh</li>
                     <li>Luôn nở nụ cười trên môi</li>
                     <li>Luôn gặp may mắn trong cuộc sống</li>
                     <li>Luôn xinh đẹp trong mắt mọi người</li>
-                    <li>Luôn hạnh phúc trong tình yêu</li>
+                    <li>Luôn luôn hạnh phúc nhé</li>
                 </ul>
             </div>
         </div>
