--- a/card.html
+++ b/card.html
@@ -21,10 +21,10 @@
             <div class="card-info" id="info_card">
                 <h2>Chúc Nguyễn Thị Huyền:</h2>
                 <ul>
-                    <li>Luôn khỏe mạnh</li>
-                    <li>Luôn nở nụ cười trên môi</li>
-                    <li>Luôn gặp may mắn trong cuộc sống</li>
-                    <li>Luôn xinh đẹp trong mắt mọi người</li>
+                    <li>Luôn khỏe mạnh nhé</li>
+                    <li>Luôn nở nụ cười trên môi nhé</li>
+                    <li>Luôn gặp may mắn trong cuộc sống nhé</li>
+                    <li>Luôn xinh đẹp trong mắt mọi người nhé</li>
                     <li>Luôn luôn hạnh phúc nhé</li>
                 </ul>
             </div>
